Fixed errors, optimized and made .jar
Next step is to do the .exe and im done